<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1.0" >
    
	<EditText
	    android:id="@+id/editNopol"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="4dp"
	    android:layout_marginLeft="4dp"
	    android:layout_marginRight="4dp"
	    android:layout_marginTop="16dp"
	    android:hint="@string/mainkendaraan_nopoldata"
	    android:inputType="textCapCharacters" />

	<EditText
	    android:id="@+id/editMerk"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="4dp"
	    android:layout_marginLeft="4dp"
	    android:layout_marginRight="4dp"
	    android:layout_marginTop="4dp"
	    android:hint="@string/mainkendaraan_jenisdata"
	    android:inputType="textCapSentences" />

    <EditText
        android:id="@+id/editJarMax"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginLeft="4dp"
        android:layout_marginRight="4dp"
        android:layout_marginTop="4dp"
        android:hint="@string/mainkendaraan_jarakmaxdata_dialog"
        android:inputType="numberDecimal" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/dialog_kendaraan_batal_but"
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/batal">
        </Button>
        <Button
            android:id="@+id/dialog_kendaraan_simpan_but"
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/simpan">
        </Button>
    </LinearLayout>
</LinearLayout>
