<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:weightSum="1.0"
    android:layout_margin="10dp">

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/maincari_curloc"
        android:textStyle="bold" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0">
	    <TextView
	        android:layout_weight=".4"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/maincari_curloc_latstr" />
	    <TextView
	        android:id="@+id/textCurLatitude"
	        android:layout_weight=".6"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:hint="@string/maincari_curloc_valstrnull" >
	    </TextView>
	</LinearLayout>	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_weight=".4"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/maincari_curloc_longstr">
        </TextView>
        <TextView
            android:id="@+id/textCurLongitude"
            android:layout_weight=".6"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/maincari_curloc_valstrnull"/>
    </LinearLayout>
    
    <TextView
        android:layout_marginTop="10dp"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/maincari_datastr"
        android:textStyle="bold" >
	</TextView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0">	    <TextView
	        android:layout_weight=".5"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/bengkel_name_text" />

	    <TextView
	        android:id="@+id/textDataNama"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".5"
	        android:hint="@string/bengkel_name_text" >

	    </TextView>
	</LinearLayout>	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/bengkel_alamat_text">
        </TextView>

        <TextView
            android:id="@+id/textDataAlamat"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/bengkel_alamat_text" />

    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/maincari_curloc_latstr">
        </TextView>
        <TextView
            android:id="@+id/textDataLatitude"
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/maincari_curloc_latstr"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/maincari_curloc_longstr">
        </TextView>
        <TextView
            android:id="@+id/textDataLongitude"
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/maincari_curloc_longstr"/>
    </LinearLayout>
    <Button 
            android:id="@+id/buttonChekin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/checkin"/>
    
    <ListView 
        android:layout_marginTop="10dp"
        android:id="@+id/LV1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ListView>

</LinearLayout>
