<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:layout_margin="10dp" >
	
    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/mainkendaraan_datastr"
        android:textStyle="bold" />
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:weightSum="1.0">
	    <TextView
	        android:layout_weight=".5"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:text="@string/mainkendaraan_nopoldata" />
	    <TextView
	        android:id="@+id/textDataNopol"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight=".5"
	        android:hint="@string/mainkendaraan_nopoldata" >
	    </TextView>
	</LinearLayout>	
	
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mainkendaraan_jenisdata">
        </TextView>
        <TextView
            android:id="@+id/textDataJenisKendaraan"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:hint="@string/mainkendaraan_jenisdata" />
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mainkendaraan_jarakditempuhdata">
        </TextView>
        <TextView
            android:id="@+id/textDataJarakDitempuhKendaraan"
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/mainkendaraan_jarakditempuhdata"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mainkendaraan_jarakmaxdata">
        </TextView>
        <TextView
            android:id="@+id/textDataJarakMaxKendaraan"
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/mainkendaraan_jarakmaxdata"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <TextView
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/mainkendaraan_last_mbengkel">
        </TextView>
        <TextView
            android:id="@+id/textDataLastMbengkel"
            android:layout_weight=".5"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/mainkendaraan_last_mbengkel"/>
    </LinearLayout>
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/kendaraan_button_activate"
	        android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mainkendaraan_activate">
        </Button>
    </LinearLayout>
    <ListView 
        android:layout_marginTop="10dp"
        android:id="@+id/LVK"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"></ListView>
</LinearLayout>
