<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:weightSum="1.0" >
    
	<TextView
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:layout_marginBottom="4dp"
	    android:layout_marginLeft="4dp"
	    android:layout_marginRight="4dp"
	    android:layout_marginTop="4dp"
	    android:text="@string/low_oil_alert_data"/>

	<LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" >
        <Button
            android:id="@+id/dialog_low_oil_cancel"
            android:layout_weight=".4"
	        android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:text="@string/batal">
        </Button>

        <Button
            android:id="@+id/dialog_low_oil_cari"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".6"
            android:text="@string/search_button" />

    </LinearLayout>
</LinearLayout>
